style: add global styles and update index.html
- Add Tailwind CSS directives
- Add Material Icons font
- Add custom scrollbar styles
- Configure viewport and meta tags

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+@import 'tailwindcss';
+@import 'tailwindcss-primeui';
+@plugin 'tailwind-scrollbar';
+@custom-variant dark (&:where(.my-app-dark, .my-app-dark *));
+@import '@ctrl/ngx-emoji-mart/picker';
+
+
